# softmatcha-docker-nlp2025

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: docker_push.yaml
data/txt/en/: A-01-02.txt  A-05-03.txt  A-07-01.txt  A-10-03.txt  A-10-04.txt  B-03-05.txt  C-01-01.txt  C-04-02.txt  C-06-01.txt  C-06-05.txt  D-01-03.txt  D-03-03.txt  D-04-01.txt  D-09-02.txt  E-05-02.txt  E-08-05.txt  E-10-04.txt  P-01-08.txt  P-01-10.txt  P-01-12.txt  P-01-14.txt  P-01-18.txt  P-01-22.txt  P-01-24.txt  P-02-02.txt  P-02-05.txt  P-03-07.txt  P-04-05.txt  P-04-06.txt  P-05-16.txt  P-06-07.txt  P-06-08.txt  P-07-17.txt  P-09-03.txt  P-09-04.txt  P-09-11.txt  P-09-13.txt  P-09-21.txt  P-10-02.txt  Q-01-06.txt  (+26 more)
data/txt/ja/: A-01-01.txt  A-01-03.txt  A-01-04.txt  A-01-05.txt  A-01-06.txt  A-02-01.txt  A-02-02.txt  A-02-03.txt  A-02-04.txt  A-02-05.txt  A-02-06.txt  A-03-01.txt  A-03-02.txt  A-03-03.txt  A-03-04.txt  A-03-05.txt  A-03-06.txt  A-04-01.txt  A-04-02.txt  A-04-03.txt  A-04-04.txt  A-04-05.txt  A-04-06.txt  A-05-01.txt  A-05-02.txt  A-05-04.txt  A-05-05.txt  A-05-06.txt  A-06-01.txt  A-06-02.txt  A-06-03.txt  A-06-04.txt  A-06-05.txt  A-06-06.txt  A-07-02.txt  A-07-03.txt  A-07-04.txt  A-07-05.txt  A-07-06.txt  A-08-01.txt  (+671 more)
scripts/: 0_setup_cpu.sh  1_prep.sh
src/: config.py  download_corpora.py  get_tokenizer.py  indexing.py  mylogger.py  run_demo.py  search.py  search_test.py
src/preprocess/: augstinian_sermon_parallelisms.py  merge_txts.py  perseus_preprocess.py
static/css/: index.css
static/js/: index.js
templates/: top.html
